# CollegeWork

./: README.md
BazeDeDate/: Users.txt
DesignPatterns/src/: Main.java
GraphsProject1/: main.py
GraphsProject1/Graph/: Edge.py  graph_class.py  vertece.py
GraphsProject1/ui/: console.py
GraphsProject2/Graph/: graph_class.py
GraphsProject2/ui/: console.py
GraphsProject3/: Documentation.odt  main.py
GraphsProject3/Graph/: graph_class.py  vertece.py
GraphsProject3/ui/: console.py
Lab11-part2/: Makefile  dog.cpp  gui.cpp  gui.h
PLF/Lisp_1/: FovasDenisDanielGeorge._Test.lisp  lisp1_FovasDenis.fas  lisp1_FovasDenis.lisp  lisp2_FovasDenis.lisp  lisp3_FovasDenis.lisp  test.pl  test.txt
PLF/PregatireExam/: exam_trees.lsp  p1.lisp  prolog1.pl  tree1.LISP
PLF/Prolgo_2/: 5_FovasDenis.pl
PLF/Prolog_1/: FovasDenisDanielGeorge_P1.pl  problem.pl~
PLF/Prolog_3/: 3_FovasDenis.pl
SDA/: Book.cpp  Book.h  CMakeCache.txt  CMakeLists.txt  Set.h  Tests.cpp  Tests.h  UI.cpp  UI.h  main.cpp
ToyInterpreter/: build.xml
christmas/: Makefile  main.c
lab12/: UserController.h  lab12-3.pro  mainwindow.cpp
lab3-4/: controller.c  controller.h  main.c  material.c  material.h  repostiroy.c  repostiroy.h  ui.c  ui.h
lab5-6/: CMakeCache.txt  CMakeLists.txt  DogController.h  DynamicArray.cpp  DynamicArray.h  Makefile  Repository.h  UserController.cpp  app  dog.cpp  dog.h  lab5_6  main.cpp
lab5-6/lab5-6/: CMakeLists.txt  Controller.h  DogController.cpp  DynamicArray.cpp  MainUi.cpp  UiAdmin.cpp  UiAdmin.h  UserController.cpp  UserUi.h  dog.cpp  dog.h  main.cpp
(+173 files in other folders)
